2007-05-09  Marc Singer  <elf@zealous.synapsedev.com>

	* src/arch-arm/entry/apex.lds.S: Start of reorganization of the
	bootstrap so that we don't need to use function calls to handle
	early setup *and* we don't depend on macros.

2007-05-07  Marc Singer  <elf@zealous.synapsedev.com>

	* src/drivers/relocate-onenand.c: Implementation of OneNAND
	APEX relocation for bootstrap.

	* src/apex/env.c: Improved the environment link so that it can
	exist even if there is no user-modifiable environment.  This is to
	allow user-land to browse environment variables even if they
	cannot set them.

	* src/mach-lh7a40x/preinitialization-companion.c: Comment on
	preinitialization.

2007-05-04  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/ipu.c (cmd_ipu): Fixed the i2c code and added hooks
	to enable camera test patterns.

	* src/mach-mx3/initialize.c: Substantially enhanced the system
	setup.  The IPU test code is now able to write to memory.

	* src/apex/cmd-version.c (cmd_version): Added target board
	description string.

2007-04-30  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/initialize.c: Extra check in the initialization
	routine so that we don't alter the timing registers if the CPU is
	already in the target mode.  It looks like the CPU doesn't like
	the PLLs being changed once it has booted.  It may be the SDRAM
	that doesn't like the timing change.
	
	* src/arch-arm/entry/reset.c: Restored setting of the CPSR mode in
	the loader.  The CPU boots in the undefined mode.  We move to
	supervisor mode, though this doesn't appear to be necessary for
	the kernel to boot.

	* src/mach-mx3/ipu.c (ipu_report): Improved clarity of IPU report
	to break out fields and to describe the formats in English.
	
2007-04-27  Marc Singer  <elf@buici.com>

	* include/asm/cp15-armv6.h: Fixed the cache control macros for the
	ARMV6.

2007-04-27  Marc Singer  <elf@zealous.synapsedev.com>

	* src/mach-mx3/ipu.c: More IPU debug code.  The report function