@@ -1,3 +1,8 @@
+2007-05-10  Marc Singer  <elf@cerise.buici.com>
+
+	* src/apex/command.c (call_command): Reorganized command
+	invocation to report bogus command requests.
+
 2007-05-09  Marc Singer  <elf@zealous.synapsedev.com>
 
 	* src/arch-arm/entry/apex.lds.S: Start of reorganization of the
